# antigravity-sdk-rust

./: AGENTS.md  README.md  agent.py  agent_test.py  rust_sprints_spec.md  types.py  types_test.py  update_ci.sh
.github/workflows/: rust.yml
connections/: connection.py  local_connection.py  local_connection_test.py
conversation/: conversation.py  conversation_test.py
examples/: example_policies.py  example_policies_test.py
examples/agents/: custom_policy_agent.py  hooks_and_triggers_agent.py  simple_agent.py  templated_system_instructions.py  tool_and_mcp_agent.py
google/antigravity/: __init__.py  agent.py  agent_test.py  types.py
google/antigravity/connections/: README.md  local_connection.py  local_connection_test.py
google/antigravity/conversation/: README.md  conversation.py  conversation_test.py
google/antigravity/examples/: local_connection_example.py
hooks/: README.md  TODO.md  cli.py  cli_test.py  hook_runner.py  hook_runner_test.py  hooks.py  hooks_test.py  policy.py  policy_test.py
mcp/: bridge.py  bridge_test.py
rust/: Cargo.toml  build.rs
rust/proto/: localharness.proto
rust/src/: hooks.rs  lib.rs  tools.rs  triggers.rs  types.rs
rust/src/connections/: connection.rs  local.rs  local_config.rs  local_test.rs  mod.rs
tools/: gemini_client.py  gemini_client_test.py  image_generation.py  image_generation_test.py  tool_runner.py  tool_runner_test.py
triggers/: README.md  __init__.py  helpers.py  helpers_test.py  trigger_runner.py  triggers.py  triggers_test.py
utils/: cli_utils.py  cli_utils_test.py
(+13 files in other folders)
