[workspace]
members = ["."]

[package]
name = "google-antigravity"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
prost = "0.14.4"
tonic = "0.14.6"
anyhow = "1.0.102"

[build-dependencies]
prost-build = "0.14.4"
tonic-build = "0.14.6"
